--- a/Pt IV_0905.ipynb
+++ b/Pt IV_0905.ipynb
@@ -414,6 +414,10 @@
     "    GROUP BY m.birthState\n",
     "    HAVING AVG(m.height) > {}\n",
     "    ORDER BY m.birthState ASC;\n",
+    "    \n",
+    "    DROP INDEX bpid ON Batting; \n",
+    "    DROP INDEX hpid ON HallOfFame; \n",
+    "    DROP INDEX pyid ON Pitching;\n",
     "    \"\"\".format(jaar_1, jaar_1, jaar_2, lengte)\n",
     "    \n",
     "    # Stap 2 & 3\n",
@@ -463,9 +467,6 @@
     "    timings_optim_1.append(t2-t1) \n",
     "    \n",
     "optim_1_runtime = np.mean(timings_optim_1) # Runtime optimalisatie 1\n",
-    "\n",
-    "# Verwijder de gemaakte indexen opnieuw\n",
-    "run_query(\"DROP INDEX bpid ON Batting; DROP INDEX hpid ON HallOfFame; DROP INDEX pyid ON Pitching;\")\n",
     "\n",
     "# Vergelijken met originele query\n",
     "diff = orig_runtime-optim_1_runtime # Winst t.o.v. origineel\n",
