--- a/Pt IV_0905.ipynb
+++ b/Pt IV_0905.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,20 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sys.version_info(major=3, minor=6, micro=4, releaselevel='final', serial=0)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sys.version_info       # Check python versie, wij veronderstellen 3.6"
    ]
@@ -278,7 +267,7 @@
     "db = 'lahman2016'      # Naam van de gegevensbank op je XAMPP Mysql server\n",
     "\n",
     "# We verbinden met de gegevensbank\n",
-    "c = verbind_met_GB(username, hostname, db)"
+    "c1 = verbind_met_GB(username, hostname, db)"
    ]
   },
   {
@@ -297,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "De originele query duurt:  0.81  seconden\n"
+      "De originele query duurt:  1.38  seconden\n"
      ]
     }
    ],
@@ -307,7 +296,7 @@
     "# We voeren deze query 5 keer uit om een betere schatting te krijgen van de effectieve runtime.\n",
     "for i in range(5):\n",
     "    t1 = time.time() # Start time\n",
-    "    df_orig = query_to_optimize(c, column_names, jaar_1=2000, jaar_2=1990, lengte=75)\n",
+    "    df_orig = query_to_optimize(c1, column_names, jaar_1=2000, jaar_2=1990, lengte=75)\n",
     "    t2 = time.time() # Stop time\n",
     "    timings.append(t2-t1) \n",
     "    \n",
@@ -342,18 +331,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\n    CREATE INDEX mpid ON Master(playerID);\\n    CREATE INDEX ppid ON Pitching(PlayerID);\\n    CREATE INDEX bpid ON Batting(PlayerID);\\n    CREATE INDEX hpid ON HallOfFame(PlayerID);\\n    CREATE INDEX pyid ON Pitching(YearID);\\n    CREATE INDEX byid ON Batting(YearID);\\n    CREATE INDEX hyid ON HallOfFame(YearID);\\n    \\n    SELECT m.birthState, AVG(m.weight), AVG(m.height), AVG(bat.HR), AVG(pit.SV)\\n    FROM Master AS m,\\n        Pitching AS pit,\\n        Batting AS bat,\\n        HallOfFame AS hof\\n    WHERE pit.yearID = 2000\\n        AND bat.yearID = 2000\\n        AND pit.playerID = m.playerID\\n        AND bat.playerID = m.playerID\\n        AND m.playerID = hof.playerID\\n        AND hof.yearID > 1990\\n    GROUP BY m.birthState\\n    HAVING AVG(m.height) > 75\\n    ORDER BY m.birthState ASC;\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: unrecognized arguments: output\n"
+     ]
     }
    ],
    "source": [
-    "#VOORLOPIGE QUERY: \n",
+    "%%capture #suppress output\n",
     "'''\n",
     "    CREATE INDEX mpid ON Master(playerID);\n",
     "    CREATE INDEX ppid ON Pitching(PlayerID);\n",
@@ -362,21 +348,6 @@
     "    CREATE INDEX pyid ON Pitching(YearID);\n",
     "    CREATE INDEX byid ON Batting(YearID);\n",
     "    CREATE INDEX hyid ON HallOfFame(YearID);\n",
-    "    \n",
-    "    SELECT m.birthState, AVG(m.weight), AVG(m.height), AVG(bat.HR), AVG(pit.SV)\n",
-    "    FROM Master AS m,\n",
-    "        Pitching AS pit,\n",
-    "        Batting AS bat,\n",
-    "        HallOfFame AS hof\n",
-    "    WHERE pit.yearID = 2000\n",
-    "        AND bat.yearID = 2000\n",
-    "        AND pit.playerID = m.playerID\n",
-    "        AND bat.playerID = m.playerID\n",
-    "        AND m.playerID = hof.playerID\n",
-    "        AND hof.yearID > 1990\n",
-    "    GROUP BY m.birthState\n",
-    "    HAVING AVG(m.height) > 75\n",
-    "    ORDER BY m.birthState ASC;\n",
     "'''"
    ]
   },
@@ -384,22 +355,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " We merken echter op dat het creëren van de indexen door de grootte van de database zeer traag verloopt. Door het gebruik van het explain-statement zien we dat ook niet alle gecreëerde indexen gebruikt worden. Enkel pyid, hpid en bpid worden gebruikt. Bijgvolg verwijderen de creatie van alle andere indexen uit deze query. Aan het einde van de query verwijderen de indexen weer uit de database zodat de indexen nog niet bestaan op het moment dat de gegeven query wordt gerund."
+    " We merken echter op dat het creëren van de indexen door de grootte van de database zeer traag verloopt. Door het gebruik van het explain-statement zien we dat ook niet alle gecreëerde indexen gebruikt worden. Enkel pyid, hpid en bpid worden gebruikt. Bijgvolg verwijderen de creatie van alle andere indexen uit het bovenstaande commando. We maken een tweede database 'lahman_indexed' aan en voeren onderstaande SQL-code uit op deze database. Dit gebeurt vanuit phpMyAdmin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: unrecognized arguments: output\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%capture #suppress output\n",
+    "\"\"\"\n",
+    " CREATE INDEX bpid ON Batting(PlayerID);\n",
+    " CREATE INDEX hpid ON HallOfFame(PlayerID);\n",
+    " CREATE INDEX pyid ON Pitching(YearID);\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De query die we vervolgens uitvoeren, is precies dezelfde als die we reeds gekregen hebben. We vinden geen manier om de query zelf te herschrijven waardoor deze efficiënter zou worden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Maak hier je eerste optimalisatie\n",
     "def optim_1(connection, column_names, jaar_1=2000, jaar_2=1990, lengte=75):\n",
     "    query=\"\"\"\n",
-    "    CREATE INDEX bpid ON Batting(PlayerID);\n",
-    "    CREATE INDEX hpid ON HallOfFame(PlayerID);\n",
-    "    CREATE INDEX pyid ON Pitching(YearID);\n",
-    "    \n",
     "    SELECT m.birthState, AVG(m.weight), AVG(m.height), AVG(bat.HR), AVG(pit.SV)\n",
     "    FROM Master AS m,\n",
     "        Pitching AS pit,\n",
@@ -414,17 +410,42 @@
     "    GROUP BY m.birthState\n",
     "    HAVING AVG(m.height) > {}\n",
     "    ORDER BY m.birthState ASC;\n",
-    "    \n",
-    "    DROP INDEX bpid ON Batting; \n",
-    "    DROP INDEX hpid ON HallOfFame; \n",
-    "    DROP INDEX pyid ON Pitching;\n",
     "    \"\"\".format(jaar_1, jaar_1, jaar_2, lengte)\n",
     "    \n",
     "    # Stap 2 & 3\n",
-    "    res = run_multistatement_query(connection, query)         # Query uitvoeren\n",
+    "    res = run_query(connection, query)         # Query uitvoeren\n",
     "    df = res_to_df(res, column_names)          # Query in DataFrame brengen\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ten slotte moeten we nog een nieuwe connectie maken om te verbinden met de lahman_indexed database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
+   "source": [
+    "username = 'root'      # Vervang dit als je via een andere user queries stuurt\n",
+    "hostname = 'localhost' # Als je een databank lokaal draait, is dit localhost.\n",
+    "db = 'lahman2016_indexed'      # Naam van de gegevensbank op je XAMPP Mysql server\n",
+    "\n",
+    "# We verbinden met de gegevensbank\n",
+    "c2 = verbind_met_GB(username, hostname, db)"
    ]
   },
   {
@@ -438,21 +459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InterfaceError",
-     "evalue": "No result set to fetch from.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInterfaceError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-d6a4d66e4201>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mt1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Start time\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mdf_optim_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moptim_1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumn_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjaar_1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjaar_2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1990\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlengte\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m75\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mt2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Stop time\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mtimings_optim_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt2\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mt1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-12-ce828c029f12>\u001b[0m in \u001b[0;36moptim_1\u001b[1;34m(connection, column_names, jaar_1, jaar_2, lengte)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[1;31m# Stap 2 & 3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrun_multistatement_query\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconnection\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[1;33m)\u001b[0m         \u001b[1;31m# Query uitvoeren\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres_to_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumn_names\u001b[0m\u001b[1;33m)\u001b[0m          \u001b[1;31m# Query in DataFrame brengen\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-3-4f7c3e2798b8>\u001b[0m in \u001b[0;36mrun_multistatement_query\u001b[1;34m(connection, query)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m     \u001b[1;31m# Collecting the result and casting it in a pd.DataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\mysql\\connector\\cursor.py\u001b[0m in \u001b[0;36mfetchall\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    822\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfetchall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    823\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_have_unread_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 824\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mInterfaceError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"No result set to fetch from.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    825\u001b[0m         \u001b[1;33m(\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meof\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_connection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_rows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    826\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nextrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mInterfaceError\u001b[0m: No result set to fetch from."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "De optimalisatie duurt:  0.29  seconden\n",
+      "De originele versie duurde:  1.38  seconden\n",
+      "De netto tijdwinst is dus:  1.08  seconden, oftewel 78.70 %\n",
+      "Is het resultaat equivalent?  True\n"
      ]
     }
    ],
@@ -462,7 +479,7 @@
     "timings_optim_1 = []\n",
     "for i in range(5):\n",
     "    t1 = time.time() # Start time\n",
-    "    df_optim_1 = optim_1(c, column_names, jaar_1=2000, jaar_2=1990, lengte=75)\n",
+    "    df_optim_1 = optim_1(c2, column_names, jaar_1=2000, jaar_2=1990, lengte=75)\n",
     "    t2 = time.time() # Stop time\n",
     "    timings_optim_1.append(t2-t1) \n",
     "    \n",
@@ -535,7 +552,7 @@
     "    \n",
     "    return df\n",
     "\n",
-    "vis_pandas = vis_query(c, column_names2)\n",
+    "vis_pandas = vis_query(c1, column_names2)\n",
     "\n"
    ]
   },
@@ -657,7 +674,7 @@
     "    \n",
     "    return df\n",
     "\n",
-    "vis2_pd = vis_query(c, column_names3)\n",
+    "vis2_pd = vis_query(c1, column_names3)\n",
     "vis2_pd.head()"
    ]
   },
@@ -727,13 +744,6 @@
     "    ax.set_title(\"Ward-clustering: k = %d\" % i)\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
