--- a/Pt IV_0905.ipynb
+++ b/Pt IV_0905.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sys.version_info(major=3, minor=6, micro=4, releaselevel='final', serial=0)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sys.version_info       # Check python versie, wij veronderstellen 3.6"
    ]
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,9 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
    "source": [
     "username = 'root'      # Vervang dit als je via een andere user queries stuurt\n",
     "hostname = 'localhost' # Als je een databank lokaal draait, is dit localhost.\n",
@@ -271,9 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "De originele query duurt:  1.39  seconden\n"
+     ]
+    }
+   ],
    "source": [
     "timings=[]\n",
     "\n",
@@ -311,9 +338,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: unrecognized arguments: output\n"
+     ]
+    }
+   ],
    "source": [
     "%%capture #suppress output\n",
     "'''\n",
@@ -336,9 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: unrecognized arguments: output\n"
+     ]
+    }
+   ],
    "source": [
     "%%capture #suppress output\n",
     "\"\"\"\n",
@@ -357,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,14 +434,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ten slotte moeten we nog een nieuwe connectie maken om te verbinden met de lahman_indexed database."
+    "Ten slotte moeten we een tweede connectie maken om te verbinden met de lahman2016_indexed database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
    "source": [
     "username = 'root'      # Vervang dit als je via een andere user queries stuurt\n",
     "hostname = 'localhost' # Als je een databank lokaal draait, is dit localhost.\n",
@@ -419,9 +470,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "De optimalisatie duurt:  0.29  seconden\n",
+      "De originele versie duurde:  1.39  seconden\n",
+      "De netto tijdwinst is dus:  1.11  seconden, oftewel 79.43 %\n",
+      "Is het resultaat equivalent?  True\n"
+     ]
+    }
+   ],
    "source": [
     "# Test hier je eerste optimalisatie\n",
     "\n",
