3D visualisatie af + preprocessing clusters

--- a/Pt IV_0905.ipynb
+++ b/Pt IV_0905.ipynb
@@ -193,10 +193,7 @@
     "\n",
     "Sorteer oplopend alfabetisch op staat.\n",
     "\n",
-    "Nb. Lengte is uitgedrukt in inches.\n",
-    "\n",
-    "Elias: betekenis query\n",
-    "return alle geboortestaten, het gemiddelde gewicht, hoogte, #homeruns (batting table) en #saves van alle spelers uit dezelfde geboortestaat. De spelers zijn opgenomen in de pithcing table én batting table in jaar_1 en moeten later dan het jaar jaar_2 zijn geselecteerd voor hof. De gemiddelde hoogte van de spelers in de staat moet groter zijn dan lengte. Sorteer op geboortestaat."
+    "Nb. Lengte is uitgedrukt in inches.\n"
    ]
   },
   {
@@ -306,7 +303,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We maken voor ieder gebruikt attribuut een index aan in de hoop de query te versnellen."
+    "** Explain origineel**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain uitvoeren op de originele query levert, kort samengevat, volgende resultaten:\n",
+    "- alle tabellen uit de query worden gebruikt, dat zijn er 4\n",
+    "- nergens zijn keys mogelijk te gebruiken / zijn ze gebruikt\n",
+    "- het verwachte aantal te lezen rows is het totale aantal rows\n",
+    "- er worden temporary tables aangemaakt\n",
+    "- er wordt gesorteerd\n",
+    "- overal worden where conditions gebruikt\n",
+    "- 3 joins, BNL joins met buffers, eventueel incremental"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We maken voor ieder gebruikt attribuut een index aan in de hoop de query te versnellen. "
    ]
   },
   {
@@ -331,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " We merken echter op dat het creëren van de indexen door de grootte van de database zeer traag verloopt. Door het gebruik van het explain-statement zien we dat ook niet alle gecreëerde indexen gebruikt worden. Enkel pyid, hpid en bpid worden gebruikt. Bijgvolg verwijderen de creatie van alle andere indexen uit het bovenstaande commando. We maken een tweede database 'lahman_indexed' aan en voeren onderstaande SQL-code uit op deze database. Dit gebeurt vanuit phpMyAdmin."
+    " We merken echter op dat het creëren van de indexen door de grootte van de database zeer traag verloopt. Door het gebruik van het explain-statement zien we dat ook niet alle gecreëerde indexen gebruikt worden. Enkel pyid, hpid, mpid en bpid worden gebruikt. Bijgvolg verwijderen de creatie van alle andere indexen uit het bovenstaande commando. We maken een tweede database 'lahman_indexed' aan en voeren onderstaande SQL-code uit op deze database. Dit gebeurt vanuit phpMyAdmin."
    ]
   },
   {
@@ -345,6 +363,7 @@
     " CREATE INDEX bpid ON Batting(PlayerID);\n",
     " CREATE INDEX hpid ON HallOfFame(PlayerID);\n",
     " CREATE INDEX pyid ON Pitching(YearID);\n",
+    " CREATE INDEX mpid ON Master(PlayerID);\n",
     "\"\"\""
    ]
   },
@@ -385,6 +404,29 @@
     "    df = res_to_df(res, column_names)          # Query in DataFrame brengen\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Explain optimalisatie**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain uitvoeren op de query in de indexed database levert, kort samengevat, volgende resultaten:\n",
+    "- 3 van de 4 tabellen worden via een key betreden\n",
+    "- het verwachte aantal te lezen rows is veel lager\n",
+    "- slechts 1 join, BNL join met buffer\n",
+    "\n",
+    "Bleef hetzelde:\n",
+    "- alle tabellen uit de query worden gebruikt, dat zijn er 4\n",
+    "- worden temporary tables aangemaakt\n",
+    "- wordt gesorteerd\n",
+    "- overal worden where conditions gebruikt\n"
    ]
   },
   {
@@ -479,12 +521,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Visualisatie 1: Gewicht vs Salaris **\n",
+    "\n",
+    "Bij de eerste visualisatie kijken we naar de eventuele correlatie tussen gewicht en salaris van baseball spelers.\n",
+    "Dit door een query uit te voeren die het gewicht en het gemiddelde salaris opvraagd voor elke speler in de database.\n",
+    "\n",
+    "Deze query gaat een stuk sneller met een index op master(playerID), daarom gebruiken we connectie c2 met lahman2016_indexed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#VISUALISATIE 1\n",
     "column_names2 = ['weight', 'avg_salary']\n",
     "\n",
     "def vis_query(connection, column_names):\n",
@@ -501,7 +554,7 @@
     "    \n",
     "    return df\n",
     "\n",
-    "vis_pandas = vis_query(c1, column_names2)\n",
+    "vis_pandas = vis_query(c2, column_names2)\n",
     "\n"
    ]
   },
@@ -512,64 +565,87 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "vis_pandas['avg_salary'] = vis_pandas['avg_salary'].astype('float')\n",
-    "vis_pandas.dtypes\n",
-    "vis_pandas.plot.scatter(x='avg_salary', y='weight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "vis_np = np.array(vis_pandas)\n",
-    "#numpy array verliest kolomnaam, 1ste is weight, 2de is avg_salary\n",
-    "plt.scatter(vis_np[:, 0], vis_np[:, 1])"
+    "#Salaris instellen als floating point getal\n",
+    "vis_pandas['avg_salary'] = vis_pandas['avg_salary'].astype('float')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "vis_np = np.array(vis_pandas)\n",
+    "plt.figure()\n",
+    "#numpy array verliest kolomnaam, 1ste is weight, 2de is avg_salary\n",
+    "plt.title(\"Salaris in functie van gewicht (Spelers)\")\n",
+    "plt.xlabel(\"Gewicht [pounds]\")\n",
+    "plt.ylabel(\"Salaris\")\n",
+    "plt.yscale('log')\n",
+    "plot = plt.scatter(vis_np[:, 0], vis_np[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Clusteren **\n",
+    "\n",
+    "Om de visualisatie nog wat meer pit te geven, onderzoeken we of er groepjes te vinden zijn in de Salaris-gewicht koppels. Dit doen we met clusteren, enerzijds met een voorgezet aantal groepjes of clusters en anderzijds met een automatisch bepaald aantal.\n",
+    "\n",
+    "KMeans en Ward-Clustering met aantal groepjes (= K) gelijk aan 8."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "from sklearn import cluster as cl\n",
+    "from sklearn import preprocessing as pre\n",
     "\n",
-    "for i in range(2, 10, 2):\n",
-    "    plt.figure(tight_layout=True)\n",
-    "    \n",
-    "    plt.subplot(141)\n",
-    "    plt.yscale('log')\n",
-    "    clf = cl.AgglomerativeClustering(i)\n",
-    "    y = clf.fit_predict(vis_np)\n",
-    "    plt.title(\"Ward-clustering: %d\" % i)\n",
-    "    plt.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='viridis')\n",
+    "#normaliseer data\n",
+    "scaler = pre.StandardScaler().fit(vis_np)\n",
+    "vis_scl = scaler.transform(vis_np)\n",
     "\n",
-    "    plt.subplot(142)\n",
-    "    plt.yscale('log')\n",
-    "    plt.title(\"KMeans-clustering: %d\" % i)\n",
-    "    clf = cl.KMeans(i)\n",
-    "    y = clf.fit_predict(vis_np)\n",
-    "    plt.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='viridis')\n",
-    "    \n",
-    "    plt.subplot(143)\n",
-    "    plt.yscale('log')\n",
-    "    clf = cl.AgglomerativeClustering(i+1)\n",
-    "    y = clf.fit_predict(vis_np)\n",
-    "    plt.title(\"Ward-clustering: %d\" % (i+1))\n",
-    "    plt.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='viridis')\n",
     "\n",
-    "    plt.subplot(144)\n",
-    "    plt.yscale('log')\n",
-    "    plt.title(\"KMeans-clustering: %d\" % (i+1))\n",
-    "    clf = cl.KMeans(i+1)\n",
-    "    y = clf.fit_predict(vis_np)\n",
-    "    plt.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='viridis')\n",
-    "    plt.show()"
+    "fig = plt.figure(tight_layout=True)\n",
+    "\n",
+    "i = 8\n",
+    "ax1 = fig.add_subplot(121)\n",
+    "clf = cl.AgglomerativeClustering(i)\n",
+    "y = clf.fit_predict(vis_scl)\n",
+    "ax1.set_title(\"Ward-clustering: K = %d\" % i)\n",
+    "ax1.set_xlabel(\"Gewicht [pounds]\")\n",
+    "ax1.set_ylabel(\"Salaris\")\n",
+    "ax1.set_yscale('log')\n",
+    "ax1.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='viridis')\n",
+    "\n",
+    "ax2 = fig.add_subplot(122)\n",
+    "ax2.set_title(\"KMeans-clustering: K = %d\" % i)\n",
+    "ax2.set_xlabel(\"Gewicht [pounds]\")\n",
+    "ax2.set_ylabel(\"Salaris\")\n",
+    "ax2.set_yscale('log')\n",
+    "clf = cl.KMeans(i)\n",
+    "y = clf.fit_predict(vis_scl)\n",
+    "ax2.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='viridis')\n",
+    "\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DBSCAN-clustering op dezelfde data met automatisch bepaald aantal groepjes.\n",
+    "Dit is heel parametergevoelig en dus niet gemakkelijker dan met een vooraf bepaalde K."
    ]
   },
   {
@@ -580,11 +656,14 @@
    "source": [
     "plt.figure(tight_layout=True)\n",
     "plt.yscale('log')\n",
-    "bandwidth = cl.estimate_bandwidth(vis_np)\n",
-    "clf = cl.MeanShift(bin_seeding=True)\n",
-    "y = clf.fit_predict(vis_np)\n",
-    "plt.title(\"MeanShift-clustering\")\n",
-    "plt.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='viridis')"
+    "\n",
+    "clf = cl.DBSCAN(min_samples = 2, eps = 0.20)\n",
+    "\n",
+    "#fit op genormaliseerde data\n",
+    "y = clf.fit_predict(vis_scl)\n",
+    "\n",
+    "plt.title(\"DBSCAN-clustering op Salaris - Gewicht data\")\n",
+    "p1 = plt.scatter(vis_np[:, 0], vis_np[:, 1], c=y, cmap='plasma')"
    ]
   },
   {
@@ -592,8 +671,10 @@
    "metadata": {},
    "source": [
     "### 2de visualisatie:\n",
-    "#### weight vs total homeruns vs avg salaris\n",
-    "Merk op dat in de query tupels met sum_homeruns lager dan 100 weggegooid worden, dit is arbitrair gekozen om zo te proberen interessantere clusters te vinden."
+    "#### Weight vs Total homeruns vs AVG Salaris\n",
+    "Een tweede visualisatie verderbouwend op de eerste, dit keer in 3D met zowel gewicht, totale aantal homeruns in carrière en gemiddeld salaris van elke speler.\n",
+    "\n",
+    "Merk op dat in de query tupels met tot_homeruns lager dan 100 weggegooid worden, dit is arbitrair gekozen om zo te proberen duidelijkere visualisaties te vinden. Er zijn namelijk veel spelers met relatief lage aantallen homeruns, waardoor de grafieken hier een te dense puntenwolk weergeven."
    ]
   },
   {
@@ -603,18 +684,18 @@
    "outputs": [],
    "source": [
     "#VISUALISATIE 2\n",
-    "column_names3 = ['weight', 'sum_homeruns', 'avg_salary']\n",
+    "column_names3 = ['weight', 'tot_homeruns', 'avg_salary']\n",
     "\n",
     "def vis_query(connection, column_names):\n",
     "    query=\"\"\"\n",
     "    SELECT *\n",
-    "    From (\n",
+    "    FROM (\n",
     "    SELECT m.weight, SUM(b.HR) as bhr, AVG(s.salary)\n",
     "    FROM salaries as s, Master as m, batting as b\n",
     "    WHERE m.PlayerID = s.PlayerID AND m.playerID = b.playerID\n",
     "    GROUP BY(m.PlayerID)\n",
     "    ORDER BY bhr DESC ) as T\n",
-    "    WHERE T.bhr>100\n",
+    "    WHERE T.bhr > 100\n",
     "    \"\"\"\n",
     "    \n",
     "    # Stap 2 & 3\n",
@@ -623,7 +704,7 @@
     "    \n",
     "    return df\n",
     "\n",
-    "vis2_pd = vis_query(c1, column_names3)\n",
+    "vis2_pd = vis_query(c2, column_names3)\n",
     "vis2_pd.head()"
    ]
   },
@@ -633,9 +714,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#correcte datatypes gebruiken (floating point getallen ipv Objects)\n",
     "vis2_pd['avg_salary'] = vis2_pd['avg_salary'].astype('float')\n",
-    "vis2_pd['sum_homeruns'] = vis2_pd['sum_homeruns'].astype('float')\n",
-    "vis2_pd.dtypes"
+    "vis2_pd['tot_homeruns'] = vis2_pd['tot_homeruns'].astype('float')"
    ]
   },
   {
@@ -646,13 +727,48 @@
    "source": [
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "vis2_np = np.array(vis2_pd)\n",
-    "#numpy array verliest kolomnaam, 1ste is weight, 2de avg_homeruns, 3de avg_salary\n",
+    "#numpy array verliest kolomnaam, 1ste is weight, 2de tot_homeruns, 3de avg_salary\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111, projection ='3d')\n",
-    "ax.scatter(vis2_np[:, 0], vis2_np[:, 1], vis2_np[:, 2])\n",
+    "ax.scatter(vis2_np[:, 0], np.log10(vis2_np[:, 1]), np.log10(vis2_np[:, 2]))\n",
+    "ax.set_title(\"Plotting Player Weight-Homeruns- AVG Salary\")\n",
     "ax.set_xlabel('Weight')\n",
-    "ax.set_ylabel('SUM Homeruns')\n",
-    "ax.set_zlabel('AVG Salary')\n",
+    "ax.set_ylabel('Total Homeruns (log)')\n",
+    "ax.set_zlabel('AVG Salary (log)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Clusteren ** \n",
+    "Wederom clusteren we de data, eenmaal met vooraf bepaald aantal clusters, andermaal met automatisch bepaald aantal clusters K."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#normaliseer data\n",
+    "scaler = pre.StandardScaler().fit(vis2_np)\n",
+    "vis2_scl = scaler.transform(vis2_np)\n",
+    "\n",
+    "i = 5\n",
+    "\n",
+    "clf = cl.AgglomerativeClustering(i)\n",
+    "y = clf.fit_predict(vis2_scl)\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection ='3d')\n",
+    "ax.scatter(vis2_np[:, 0], np.log10(vis2_np[:, 1]), np.log10(vis2_np[:, 2]), c=y, cmap='viridis')\n",
+    "ax.set_xlabel('Weight [pounds]')\n",
+    "ax.set_ylabel('Total Homeruns (log)')\n",
+    "ax.set_zlabel('AVG Salary (log)')\n",
+    "ax.set_title(\"Clustering Players based on Salary, Weight and Homeruns (%d clusters)\" % i)\n",
     "plt.show()"
    ]
   },
@@ -662,16 +778,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bandwidth = cl.estimate_bandwidth(vis2_np)\n",
-    "clf = cl.MeanShift(bin_seeding=True)\n",
-    "y = clf.fit_predict(vis2_np)\n",
+    "clf = cl.DBSCAN(min_samples = 3, eps = 0.5)\n",
+    "y = clf.fit_predict(vis2_scl)\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111, projection ='3d')\n",
-    "ax.scatter(vis2_np[:, 0], vis2_np[:, 1], vis2_np[:, 2], c=y, cmap='viridis')\n",
+    "ax.scatter(vis2_np[:, 0], np.log10(vis2_np[:, 1]), np.log10(vis2_np[:, 2]), c=y, cmap='viridis')\n",
     "ax.set_xlabel('Weight')\n",
-    "ax.set_ylabel('AVG Homeruns')\n",
-    "ax.set_zlabel('AVG Salary')\n",
-    "ax.set_title('MeanShift-clustering: k automatically determined')\n",
+    "ax.set_ylabel('Total Homeruns (log)')\n",
+    "ax.set_zlabel('AVG Salary (log)')\n",
+    "ax.set_title('Clustering Player data: automatic number of clusters')\n",
     "plt.show()"
    ]
   },
@@ -680,19 +795,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(2, 10):\n",
-    "    clf = cl.AgglomerativeClustering(i)\n",
-    "    y = clf.fit_predict(vis2_np)\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111, projection ='3d')\n",
-    "    ax.scatter(vis2_np[:, 0], vis2_np[:, 1], vis2_np[:, 2], c=y, cmap='viridis')\n",
-    "    ax.set_xlabel('Weight')\n",
-    "    ax.set_ylabel('SUM Homeruns')\n",
-    "    ax.set_zlabel('AVG Salary')\n",
-    "    ax.set_title(\"Ward-clustering: k = %d\" % i)\n",
-    "    plt.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
